--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <a class="header__lang-link" href="#">En</a>
         </div>
       </header>
-      <div class="main">
-        <div class="lead">
+      <main class="main">
+        <section class="lead">
           <h1 class="lead__title">Путешествия по России</h1>
           <h2 class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
@@ -32,8 +32,10 @@
             alt="Верхняя полка"
           />
           <p class="lead__caption">ваша полка — верхняя</p>
-        </div>
-<div class="intro">
+        </section>
+
+
+<section class="intro">
     <h2 class="intro__title">Чего мы там не видели?</h2>
     <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
     <ul class="intro__list">
@@ -43,9 +45,34 @@
         <li>Природных заповедников 105</li>
         <li>Аэропортов 241</li>
     </ul>
-</div>
+</section>
 
-      </div>
+<section class="photo-grid">
+  <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд">
+  <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Тулси">
+  <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман">
+  <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
+  <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Лед и колесо">
+  <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Пляж Байкала">
+  <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+  <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Кондратьев">
+  <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка_1">
+  <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка_2">
+  <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал_2">
+  <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Эргаки">
+
+</section>
+
+
+<section class="cover">
+  <h2 class="cover__title">До Байкала «на собаках»</h2>
+  <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+
+</section>
+
+
+
+      </main>
     </div>
   </body>
 </html>
