--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@
           />
         </section>
 
+
+<div class="places">
+  <div class="place">
+    <h2 class="place__title">Куршская коса</h2>
+    <img class="src="./images/place-kosa.jpg" alt="Куршская коса">
+    <p class=""
+  </div>
+</div>
+
+
+
         <section class="cover">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">
