--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           />
         </section>
 
-        <div class="places">
+        <section class="places">
           <div class="place">
             <h2 class="place__title">Куршская коса</h2>
 
@@ -276,27 +276,35 @@
               </p>
             </div>
           </div>
-        </div>
+        </section>
 
         <section class="cover">
-          <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До Байкала «на собаках»</a>
+          <a
+            class="cover__image"
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          >
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до
             Байкала на электричках.
           </p>
+          </a>
         </section>
-
-        <footer class="footer">
-          <div class="footer__links">
-            <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-            <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-            <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-            <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-            <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-          </div>
-          <div class="footer__copyrite">© 2022. Недбайло Руслан</div>
-        </footer>
       </main>
+      <footer class="footer">
+        <div class="footer__links">
+          <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+          <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+          <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+          <a class="footer__link" href="https://calendar.yandex.ru"
+            >Календарь</a
+          >
+          <a class="footer__link" href="https://travel.yandex.ru"
+            >Путешествия</a
+          >
+        </div>
+        <div class="footer__copyrite">© 2022. Недбайло Руслан</div>
+      </footer>
     </div>
   </body>
 </html>
