--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
         <section class="cover">
           <a
-            class="cover__image"
+            class="cover__link cover__image"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
           >
           <h2 class="cover__title">До Байкала «на собаках»</h2>
