--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
         <section class="cover">
           <a
             class="cover__link cover__image"
-            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+            href="https://stampsy.com/na-elektrichkakh-do-baikala" 
+            target="_blank"
           >
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">
