--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </ul>
         </section>
 
-        <section class="photo-grid">
+        <section class="photo-grid" aria-label ="Картинки">
           <img
             class="photo-grid__item"
             src="./images/photo-grid-train.jpg"
@@ -281,7 +281,7 @@
         <section class="cover">
           <a
             class="cover__link cover__image"
-            href="https://stampsy.com/na-elektrichkakh-do-baikala" 
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
             target="_blank"
           >
             <h2 class="cover__title">До Байкала «на собаках»</h2>
