--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <img
-          class="header__logo"
-          src="../russian-travel/images/header-logo.svg"
-          alt="Россия"
-        />
+        <img class="header__logo" src="./images/header-logo.svg" alt="Россия" />
         <div class="header__lang">
           <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
           <a class="header__lang-link" href="#">En</a>
@@ -28,7 +24,7 @@
           </h2>
           <img
             class="lead__image"
-            src="../russian-travel/images/lead-polka.jpg"
+            src="./images/lead-polka.jpg"
             alt="Верхняя полка"
           />
           <p class="lead__caption">ваша полка — верхняя</p>
@@ -49,15 +45,27 @@
             вашего отпуска.
           </p>
           <ul class="intro__list">
-            <li>Часовых поясов 11</li>
-            <li>Объектов природного наследия ЮНЕСКО 12</li>
-            <li>Объектов культурного наследия ЮНЕСКО 16</li>
-            <li>Природных заповедников 105</li>
-            <li>Аэропортов 241</li>
+            <li><span class="intro__list-span">Часовых поясов</span> 11</li>
+            <li>
+              <span class="intro__list-span"
+                >Объектов природного наследия ЮНЕСКО</span
+              >
+              12
+            </li>
+            <li>
+              <span class="intro__list-span"
+                >Объектов культурного наследия ЮНЕСКО</span
+              >
+              16
+            </li>
+            <li>
+              <span class="intro__list-span">Природных заповедников</span> 105
+            </li>
+            <li><span class="intro__list-span">Аэропортов</span> 241</li>
           </ul>
         </section>
 
-        <section class="photo-grid" aria-label ="Картинки">
+        <section class="photo-grid" aria-label="Картинки">
           <img
             class="photo-grid__item"
             src="./images/photo-grid-train.jpg"
