Исправил замечания первого ревью

--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
     <div class="page">
       <header class="header">
         <img class="header__logo" src="./images/header-logo.svg" alt="Россия" />
-        <div class="header__lang">
-          <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
-          <a class="header__lang-link" href="#">En</a>
-        </div>
+        <ul class="header__lang-place">
+          <li class="header__lang">
+            <a class="header__lang-link header__lang-link_active" href="#"
+              >Ru</a
+            >
+          </li>
+          <li class="header__lang">
+            <a class="header__lang-link" href="#">En</a>
+          </li>
+        </ul>
       </header>
       <main class="main">
         <section class="lead">
           <h1 class="lead__title">Путешествия по России</h1>
-          <h2 class="lead__subtitle">
+          <p class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
-          </h2>
+          </p>
           <img
             class="lead__image"
             src="./images/lead-polka.jpg"
@@ -45,7 +51,10 @@
             вашего отпуска.
           </p>
           <ul class="intro__list">
-            <li><span class="intro__list-span">Часовых поясов</span> 11</li>
+            <li>
+              <span class="intro__list-span">Часовых поясов</span>
+              11
+            </li>
             <li>
               <span class="intro__list-span"
                 >Объектов природного наследия ЮНЕСКО</span
@@ -59,9 +68,13 @@
               16
             </li>
             <li>
-              <span class="intro__list-span">Природных заповедников</span> 105
+              <span class="intro__list-span">Природных заповедников</span>
+              105
             </li>
-            <li><span class="intro__list-span">Аэропортов</span> 241</li>
+            <li>
+              <span class="intro__list-span">Аэропортов</span>
+              241
+            </li>
           </ul>
         </section>
 
@@ -288,11 +301,11 @@
 
         <section class="cover">
           <a
-            class="cover__link cover__image"
+            class="cover__link"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
             target="_blank"
           >
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
             <p class="cover__subtitle">
               По мотивам учебной темы о Транссибе — путешествие от столицы до
               Байкала на электричках.
